# assignment-12-soface2026-christian-og-andreas

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: observer.hpp  projectile.hpp  subject.hpp  unit.hpp
docs/: rts_diagram.drawio
include/: battle_monitor.hpp  game_unit.hpp  revolver.hpp  soldier.hpp  unit_selection.hpp  weapon.hpp
src/: battle_monitor.cpp  revolver.cpp  soldier.cpp  unit_selection.cpp
tests/: CMakeLists.txt
tests/src/: test_wargame.cpp
